Change the prefs to non-syncable for welcome app

Welcome app should be launched at the end of OOBE user flow for
all the devices. Right now the prefs that controls this behaviour
is syncable across devices, meaning welcome app will be launched only on
the first device this user signs into, which is undesired behaviour.

BUG=752361

Change-Id: Iab5795b568cac881cb3db498962fdb1917b038ff